force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Application_Chargent_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>