force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Chargent Orders</relationshipLabel>
    <relationshipName>Chargent_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>