force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/External_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Invoice_Id__c</fullName>
    <label>External Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>