force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/has_fees__c.field-meta.xml
<CustomField>
    <fullName>has_fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_fees</label>
    <type>Checkbox</type>
</CustomField>