force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>Permit__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Permit_Chargent_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>