force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/Receipt_type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_type__c</fullName>
    <label>Receipt type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacist</fullName>
                <default>true</default>
                <label>Pharmacist</label>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>