force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Registration_Chargent_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>