force-app/main/default/objects/ChargentOrders__ChargentOrder__c/fields/Registration_History__c.field-meta.xml
<CustomField>
    <fullName>Registration_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration History</label>
    <referenceTo>Registration_History__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Registration_History_Chargent_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>